Scenario Outlines, the rich command line, the nice output format and everything 
pure Ruby users have been enjoying for a while.

== Bugfixes
* Autotest-related Bugs: YAML missing (#136 Tobias Pape)
* Overeager "rescue LoadError" hides lots of errors (#137 Jonathan del Strother)
* Pending steps in > steps called from steps (#65 Aslak Hellesøy)

=== New features
* Call multiline steps from other steps (#144 Aslak Hellesøy)
* Run cucumber with --autoformat DIR to reformat (pretty print) all of your feature files. (Aslak Hellesøy)
* New --strict option exits with an error code if there are undefined or pending steps. (Aslak Hellesøy)
* Filtering with --tags. If you put @various @tags on your features and scenarios, 
  --tags lets you run a subset of them. (Aslak Hellesøy)
* Given, When, Then are automatically aliased to current language. 
  Ruby 1.8 doesn't allow non-ascii method names in the source, so unless you're on 1.9
  you will have to use Given, When, Then or set up your own aliases. Here is Norwegian:
    Cucumber.alias_steps(%w{Naar Saa}) # Når, Så already aliased, but can't be called. (Aslak Hellesøy)
* Run cucumber --language help to see all supported languages. (Aslak Hellesøy)
* Run cucumber --language LANG help to see keywords for a given language. (Aslak Hellesøy)
* Multiline arguments (tables and """ strings) are printed in the output. (Aslak Hellesøy)
* It's no longer necessary to compile the Treetop grammar when adding a new language. Localised parser is generated at runtime. (Aslak Hellesøy)

=== Removed features
* "GivenScenario" is gone. Instead you can call Steps from Steps, or wait for "Background (#153)"
* "More Examples" is gone. "Scenario" + "More Examples" is no longer supported. Use "Scenario Outline" + "Examples" instead.
* Pure Ruby features are no longer supported.

== 0.1.16.x (Master)

Bugfix release.

IMPORTANT NOTE FOR RAILS USERS.